--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Cine mark</h1>
+    <div>
+        <p>texto 1</p>
+        <button>cor de texto</button>
+        <button>cor de fundo</button>
+    </div>
 </body>
 </html>
