--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Cine mark</h1>
-    <div>
+    <div> class="teste1"
         <p>texto 1</p>
         <button>cor de texto</button>
         <button>cor de fundo</button>
