--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Cine mark</h1>
     <div class="teste1">
-        <p class="espaçamento">texto 1</p>
-        <button class="espaçamento">cor de texto</button>
-        <button class="espaçamento">cor de fundo</button>
+        <p class="espaso">texto 1</p>
+        <button class="espaso">cor de texto</button>
+        <button class="espaso">cor de fundo</button>
     </div>
 </body>
 </html>
