--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
         <button class="espaso">cor de texto</button>
         <button class="espaso">cor de fundo</button>
     </div>
+
+    <script src="./main.js"></script>
 </body>
 </html>
