--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Cine mark</h1>
     <div class="teste1">
         <p class="espaso">texto 1</p>
-        <button onclick="mudaCorTexto" class="espaso">cor de texto</button>
+        <button onclick=" mudarCorTexto" class="espaso">cor de texto</button>
         <button class="espaso">cor de fundo</button>
     </div>
 
