--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Cine mark</h1>
     <div class="teste1">
-        <p class="espaso">texto 1</p>
+        <p id="p1" class="espaso">texto 1</p>
         <button onclick=" mudarCorTexto()" class="espaso">cor de texto</button>
         <button class="espaso">cor de fundo</button>
     </div>
