--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="teste1">
         <p id="p1" class="espaso">ola mundo</p>
         <button onclick=" mudarCorTexto()" class="espaso">cor de texto</button>
-        <button class="espaso">cor de fundo</button>
+        <button onclick=" mudarCorFundo() " class="espaso">cor de fundo</button>
     </div>
 
     <script src="./main.js"></script>
