--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 </head>
 <body>
     <h1>Cine mark</h1>
+</header>
     <div class="teste1">
         <p id="p1" class="espaso">ola mundo</p>
         <button onclick=" mudarCorTexto()" class="espaso">cor de texto</button>
         <button onclick=" mudarCorFundo() " class="espaso">cor de fundo</button>
+    </div>
+    <div class="alinhamento">
+        <p> id="texto2">VALOR 1</p>
+        <input type="text" name="texlinput" id="textinput" class="botao">
+       <button class="botao" onclick="alterarTexto()"> alterar Texto </button>
     </div>
 
     <script src="./main.js"></script>
