--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="alinhamento">
         <p> id="texto2">VALOR 1</p>
-        <input type="text" name="texlinput" id="textinput" class="botao">
+        <input type="text" name="texlinput" value="" id="textinput" class="botao">
        <button class="botao" onclick="alterarTexto()"> alterar Texto </button>
     </div>
 
