--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button onclick=" mudarCorFundo() " class="espaso">cor de fundo</button>
     </div>
     <div class="alinhamento">
-        <p> id="texto2">VALOR 1</p>
+        <p id="texto2">VALOR 1 </p>
         <input type="text" name="texlinput" value="" id="textinput" class="botao">
        <button class="botao" onclick="alterarTexto()"> alterar Texto </button>
     </div>
