--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./stilo.css">
 </head>
 <body>
-    <h1>Cine mark</h1>
+    <h1 class="t1">Cine mark</h1>
 </header>
     <div class="teste1">
         <p id="p1" class="espaso">ola mundo</p>
