--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>os esquilos e as esquiletes</title>
-    <link rel="stylesheet" href="./stilo.css">
+    <link rel="stylesheet" href="./estilo.css">
 </head>
 <body>
     <h1 class="t1">Cine mark</h1>
