--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 class="t1">Cine mark</h1>
 </header>
     <div class="teste1">
-        <p id="p1" class="espaso">ola mundo</p>
+        <h2 id="p1" class="espaso">ola mundo</h2>
         <button onclick=" mudarCorTexto()" class="espaso">cor de texto</button>
         <button onclick=" mudarCorFundo() " class="espaso">cor de fundo</button>
     </div>
